[package]
name = "chremion"
version = "0.1.0"
authors = ["mcaravati"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.4"
btleplug = "0.7.2"
actix-web = "4.0.0-beta.5"
serde = "1.0.125"
hex = "0.4.3"
